<resources>
    <string name="app_name">TranspEX</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar nova conta</string>
    <string name="desenvolvido_por_mj">Desenvolvido por MJ</string>
    <string name="descricao">Descrição</string>
    <string name="endereco">Endereço</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="cep">CEP</string>
    <string name="solicitar_entrega">Solicitar Entrega</string>
    <string name="acompanhar_entrega">Acompanhar Entrega</string>
    <string name="entregador">Entregador</string>
    <string name="dados_do_entregador">Dados do Entregador</string>
    <string name="localizacao">Localização</string>
    <string name="confirmar_entrega">Confirmar Entrega</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="efetuar_entregas">Efetuará entregas?</string>
    <string name="cadastrar_">Cadastrar</string>
    <string name="local_atual">Local Atual abaixo no mapa</string>
</resources>
